<resources>
    <string name="app_name">SaneProject</string>
    <string name="action_settings">Settings</string>
    <string name="IPAddressLabelString">IP Address: </string>
    <string name="unknown">Unknown</string>
    <string name="IPAddressMenuString">Show IP Address</string>
    <string name="LL2PDestAddress">LL2P Dest: </string>
    <string name="LL2PSrcAddress">LL2P Src: </string>
    <string name="LL2PType">LL2P Type: </string>
    <string name="LL2PCRC">LL2P CRC: </string>
    <string name="LL2PAddressLabelString">LL2P Address: </string>
    <string name="LL2PPayloadLabel">LL2P Payload: </string>
    <string name="RoutingTableLabel">Routing Table</string>
    <string name="ForwardingTableLabel">Forwarding Table</string>
    <string name="LL3PDestAddress">LL3P Dest: </string>
    <string name="LL3PSrcAddress">LL3P Src: </string>
    <string name="LL3PType">LL3P Type: </string>
    <string name="LL3PID">LL3P ID: </string>
    <string name="name_prompt">Send to?</string>
</resources>
